# ghostpost

./: README.md  pyproject.toml
ghostpost_app/: admin.py  forms.py  models.py  views.py
ghostpost_app/migrations/: 0001_initial.py  0002_auto_20210216_2134.py  0002_auto_20210218_1701.py
ghostpost_project/: settings.py  urls.py
templates/: boast_view.html  index.html  post_view.html  roast_view.html  score_view.html
