[tool.poetry]
name = "ghostpost-amandalynnes"
version = "0.1.0"
description = "The GhostPost Machine™ is a website where people can anonymously post Boasts or Roasts of whatever they want"
authors = ["Amanda Simmons <carpe737diem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
